#868. Fixed edit/delete alignment in comment dialog

--- a/libsrc/scss/overlay.scss
+++ b/libsrc/scss/overlay.scss
@@ -288,7 +288,7 @@ $action: love comment republish;
             }
             .show_hover {
                 // TODO-polish: understand why this is needed.
-                width: 89px;
+                // width: 89px;
                 position: absolute;
                 right: 8px;
                 top: 5px;
